--- a/style.css
+++ b/style.css
@@ -14,4 +14,6 @@ footer {
     padding: 20px;
     color: white;
     background-color: #00a2c6;
+    text-align: center;
+    font-weight: bold;
 }
