--- a/style.css
+++ b/style.css
@@ -46,17 +46,16 @@ nav ul {
     width: 30%;
 }
 
-nav ul li a {
+nav ul li a,
+nav ul li a:visited {
     text-decoration: none;
+    color: black;
 }
 
-nav ul li a:hover, nav ul li a.active {
+nav ul li a:hover,
+nav ul li a.active {
     background-color: #00a2c6;
     border-radius: 5px;
-}
-
-nav ul li a:visited {
-    color: black;
 }
 
 #toogle-menu,
@@ -377,7 +376,7 @@ footer span {
         display: flex;
         flex-direction: column;
     }
-    
+
     #desc-about-me,
     #social-media {
         width: 100%;
