Menambahkan styling hover icon instagram

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ button.download-cv:hover,
 #social-media .fa-envelope:hover,
 #social-media .fa-linkedin:hover,
 #social-media .fa-github:hover,
+#social-media .fa-instagram:hover,
 .skills-icon i:hover {
     color: #00a2c6;
     transition: all 0.3s ease-in-out;
